# METAPAT

./: AGENTS.md  CHAPTER_ZERO.md  COMPLIANCE.md  DOMAIN_RESTRAINT.md  POSTULATES.md  README.md  THEOREMS.md  llms.txt  metapat_msdmd.ts  pyproject.toml
.agents/skills/: README.md
.agents/skills/doc-build/: SKILL.md
.agents/skills/llms-build/: SKILL.md
.agents/skills/meta/: SKILL.md
.agents/skills/msdmd/: SKILL.md
.agents/skills/owner-build/: SKILL.md
.agents/skills/skill-build/: SKILL.md
.agents/skills/test-build/: SKILL.md
.agents/skills/the-interdependency/: SKILL.md
codex/: full-compliance-handoff.md
docs/: full-compliance-checklist.md
examples/: boundary-earns-its-keep.md  cup.md  question.md
src/metapat/: __init__.py  canon.py  flow_plan.py  validation.py
tests/: test_contracts.py  theorem-02-tensor-precedes-time.md  theorem-03-question-as-energy-state.md  theorem-03-registration-is-not-time.md  theorem-04-observer-role-by-registration.md
